--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					</li>
 					<li>
 						<a href="#/2">
-							switch repository
+							switch branch
 						</a>
 					</li>
 					<li>
@@ -58,7 +58,7 @@
 				</pre>
 			</section>
 			<section>
-				check the branches
+				check the branches and switch another branch
 				<pre>
 					<code data-trim data-noescape data-line-numbers="">
 						git branch -a
@@ -113,7 +113,7 @@
 			</section>
 			<section>
 				<a href="#/0">
-					🏠back to home
+					🏠 back to home
 				</a>
 			</section>
 		</div>
