--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 			<section>
 				<ul>
 					<li>
-						<a href="#/1">clone repository</a>
+						<a href="#/1">
+							clone repository
+						</a>
 					</li>
 					<li>
 						<a href="#/2">
@@ -43,6 +45,11 @@
 					<li>
 						<a href="#/4">
 							rebase code
+						</a>
+					</li>
+					<li>
+						<a href="#/7">
+							🔥 kidwen's home page
 						</a>
 					</li>
 				</ul>
@@ -113,8 +120,10 @@
 			</section>
 			<section>
 				<a href="#/0">
-					🏠 back to home
+					🏠 back to start
 				</a>
+			</section>
+			<section data-background-iframe="https://kidwen.top" data-background-interactive>
 			</section>
 		</div>
 	</div>
