--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
 						</code>
 					</pre>
 				</div>
-				<div class="fragment fade-up">
+				<!-- <div class="fragment fade-up">
 					Or you can use `switch` command.
-				</div>
+				</div> -->
 			</section>
 			<section>
 				How to push your code to remote respository?
