--- a/index.html
+++ b/index.html
@@ -55,14 +55,26 @@
 				</ul>
 			</section>
 			<section>
-				clone your repository.
-				<pre>
-					<code data-trim data-noescape data-line-numbers="1|3">
-						git clone git@github.com:kidwen/git-flow.git
-						// or
-						git clone https://github.com/kidwen/git-flow.git
-					</code>
-				</pre>
+				<section>
+					Clone your repository.
+					<pre>
+						<code data-trim data-noescape data-line-numbers="1|3">
+							git clone git@github.com:kidwen/git-flow.git
+							// or
+							git clone https://github.com/kidwen/git-flow.git
+						</code>
+					</pre>
+				</section>
+				<section>
+					Check you repository.
+					<pre>
+						<code data-trim data-noescape data-line-numbers="1">
+							git remote -v
+							// origin  https://github.com/kidwen/git-flow.git (fetch)
+							// origin  https://github.com/kidwen/git-flow.git (push)
+						</code>
+					</pre>
+				</section>
 			</section>
 			<section>
 				Check the branches and switch another branch.
