add check user info:wq

--- a/index.html
+++ b/index.html
@@ -29,35 +29,56 @@
 				<ul>
 					<li>
 						<a href="#/1">
-							clone repository
+							Config git
 						</a>
 					</li>
 					<li>
 						<a href="#/2">
-							switch branch
+							Clone repository
 						</a>
 					</li>
 					<li>
 						<a href="#/3">
-							push code
+							Switch branch
 						</a>
 					</li>
 					<li>
 						<a href="#/4">
-							rebase code
+							Push code
 						</a>
 					</li>
 					<li>
 						<a href="#/5">
-							add tag
+							Rebase code
 						</a>
 					</li>
 					<li>
-						<a href="#/7">
+						<a href="#/6">
+							Add tag
+						</a>
+					</li>
+					<li>
+						<a href="#/8">
 							🔥 kidwen's home page
 						</a>
 					</li>
 				</ul>
+			</section>
+			<section>
+				First check your user info.
+				<pre>
+					<code data-trim data-noescape>
+						git config user.name
+						git config user.email
+					</code>
+				</pre>
+				Then config your git user info.
+				<pre>
+					<code data-trim data-noescape>
+						git config --global user.name "kidwen"
+						git config --global user.email "kidwen@email.com"
+					</code>
+				</pre>
 			</section>
 			<section>
 				<section>
